refactor: Reduce cognitive complexity in SuspensableGetCharInsertion (#96376)